# bot-source-code

./: README.md  bot.py  pyproject.toml
.github/workflows/: python-app.yml
all/: bot.py  main.py
all/cogs/: economy.py  familyfeud.csv  fun.py  gen.py  levelup.py  mainbank.json  mod.py  trivia.py
